# cardano-hackathon-argentina-2022

./: .gitignore  Collateral.hs  Main.hs  Makefile  README.md  cabal.project  config-blockfrost.json  config-maestro.json  create-bot-key.sh  dex-docs.md  flake.nix  geniusyield-orderbot.cabal  setup-wallet.md
geniusyield-dex-api/: geniusyield-dex-api.cabal
geniusyield-dex-api/src/GeniusYield/DEX/Api/: Liquidity.hs  PartialOrder.hs  Utils.hs
geniusyield-framework/: geniusyield-framework.cabal
geniusyield-framework/src/GeniusYield/: Imports.hs  Providers.hs  Transaction.hs  TxBuilder.hs  Types.hs  Utils.hs
geniusyield-framework/src/GeniusYield/CardanoApi/: Query.hs
geniusyield-framework/src/GeniusYield/Providers/: Blockfrost.hs  CachedQueryUTxOs.hs  CardanoDbSync.hs  ChainIndex.hs  Common.hs  Katip.hs  LiteChainIndex.hs  Maestro.hs  Node.hs  SubmitApi.hs
geniusyield-framework/src/GeniusYield/TxBuilder/: Class.hs  Contract.hs  EmulatorTraceQuery.hs  Node.hs  NodeQuery.hs  Random.hs
geniusyield-framework/src/GeniusYield/Types/: Ada.hs  Address.hs  Datum.hs  Era.hs  Key.hs  Logging.hs  NetworkId.hs  Providers.hs  PubKeyHash.hs  Rational.hs  Redeemer.hs  Script.hs  Slot.hs  SlotConfig.hs  Time.hs  Tx.hs  TxBody.hs  TxIn.hs  TxOut.hs  TxOutRef.hs  UTxO.hs  Value.hs
geniusyield-orderbot-framework/: geniusyield-orderbot-framework.cabal
geniusyield-orderbot-framework/lib-common/GeniusYield/OrderBot/: Config.hs  Types.hs
geniusyield-orderbot-framework/lib-datasource/GeniusYield/OrderBot/: DataSource.hsig
geniusyield-orderbot-framework/lib-orderbook/GeniusYield/OrderBot/: OrderBook.hsig
geniusyield-orderbot-framework/src/GeniusYield/: OrderBot.hs
geniusyield-orderbot-framework/src/GeniusYield/OrderBot/: MatchingStrategy.hs
geniusyield-simulator/: Main.hs  geniusyield-simulator.cabal
geniusyield-simulator/army/: create-n-users.sh  users.json
geniusyield-simulator/army/users/: user1.addr  user1.skey  user1.vkey  user10.addr  user10.skey  user10.vkey  user11.addr  user11.skey  user11.vkey  user12.addr  user12.skey  user12.vkey  user13.addr  user13.skey  user13.vkey  user14.addr  user14.skey  user14.vkey  user15.addr  user15.skey  user15.vkey  user16.addr  user16.skey  user16.vkey  user17.addr  user17.skey  user17.vkey  user18.addr  user18.skey  user18.vkey  user19.addr  user19.skey  user19.vkey  user2.addr  user2.skey  user2.vkey  user20.addr  user20.skey  user20.vkey  user21.addr  (+50 more)
geniusyield-simulator/src/GeniusYield/Simulator/: Generator.hs
impl/datasource-providers/GeniusYield/OrderBot/DataSource/: Providers.hs
impl/orderbook-list/GeniusYield/OrderBot/OrderBook/: List.hs
minter/: minter.cabal  minter.hs
monitoring-tool/: monitoring-tool.cabal  monitoring-tool.hs
testnet/: era_hist_interpreter  protocol-params.json
