cabal-version: 3.0
name:          minter
version:       0.1.0.0
author:        Lars Bruenjes
maintainer:    lars.bruenjes@geniusyield.co
build-type:    Simple
copyright:     © 2022 Lars Bruenjes

executable minter
  default-language: Haskell2010
  hs-source-dirs:   .
  main-is:          minter.hs
  ghc-options:
    -Wall -O2
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -Wno-partial-type-signatures
    -fexpose-all-unfoldings
    -fobject-code

  build-depends:
      aeson
    , base
    , geniusyield-dex-api
    , geniusyield-framework
    , geniusyield-orderbot-framework:common
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
