cabal-version: 3.0
name:          monitoring-tool
version:       0.1.0.0
author:        Lars Bruenjes
maintainer:    lars.bruenjes@geniusyield.co
build-type:    Simple
copyright:     © 2022 Lars Bruenjes

executable monitoring-tool
  default-language: Haskell2010
  hs-source-dirs:   .
  main-is:          monitoring-tool.hs
  ghc-options:
    -Wall -O2 -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:
    , aeson
    , ansi-terminal
    , base
    , geniusyield-dex-api
    , geniusyield-framework
    , geniusyield-orderbot-framework:common
    , text
